product overflow fix

--- a/app/assets/stylesheets/spree/scss/_product.scss
+++ b/app/assets/stylesheets/spree/scss/_product.scss
@@ -177,6 +177,7 @@
 
 .product-cellar {
   padding: 50px 0;
+  overflow-x: hidden;
   .container {
     &.cellar-top {
       position: relative;
